--- a/Makefile.in
+++ b/Makefile.in
@@ -20,12 +20,13 @@ clean:
 
 # use this target only if you want to build the manual from scratch.
 builddoc:
-	(cd doc;tex manual;bibtex manual;tex manual;dvips manual)
+	(cd doc;./make_doc)
 	if test ! -d htm;  then mkdir htm;  fi
 	../../etc/convert.pl -c -i -t -n ace doc htm
-	(cd doc;rm manual.{blg,lab,log,aux})
+	(cd doc;rm manual.{toc,blg,lab,log,aux,idx,ind})
 
 otherdoc:
-	(cd acedoc;latex aceuser;bibtex aceuser;latex aceuser;dvips aceuser)
-	(cd acedoc;rm aceuser.{blg,log,aux})
+	(cd standalone-doc;latex ace3001;bibtex ace3001;latex ace3001;latex ace3001)
+	(cd standalone-doc;dvips ace3001 -o)
+	(cd standalone-doc;rm ace3001.{toc,blg,log,aux})
 
