README:   Updated to mention bugfix in ACE source file: src/util1.c and added   file src/CHANGES. Also, updated list of compilers with which ACE has   been successfully compiled. src/CHANGES:   New. Lists changes made to src directory provided by Colin Ramsay and   George Havas. src/Makefile.in:   Added some extra comments for choice of CC and provided two commented   alternatives for cc on SGI for 32bit and 64bit.   Changed := to = for THEDATE (:= upsets some make s). src/coinc.c:   Removed unused variable l (see src/CHANGES). src/postproc.c   Changed bad usage of `normalise' (see src/CHANGES). src/util1.c   Removed bug (see src/CHANGES). gap/interact.gi   Modified ACEConjugatesForSubgroupNormalClosure for change in   src/postproc.c. doc/interact.tex, doc/otheroptions.tex:   Put $$ on lines of their own so the on-line help parses the maths   displays correctly.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -6,9 +6,11 @@
 # -pedantic : be bloody picky
 # -ansi     : enforce ANSII compliance
 
-# on a SGI ozone machine, the following assignement needs to be replaced by:
-# CC = cc -64 -O2 -ansi
+# With most UNIX operating systems set CC to gcc e.g. for Linux, Solaris.
+# For SGIs use the native compiler cc; if 64bit is supported use cc -64
 CC  = gcc -Wall -pedantic -ansi -O2
+# CC = cc -O2 -ansi
+# CC = cc -64 -O2 -ansi
 
 # ACE Level 0, 1 & 2 switches 
 #
@@ -34,7 +36,7 @@ SRC0A = enum00.c enum01.c enum02.c
 # Note the setting of (THE)DATE, so that we can record the time/date of
 # this build in the executable (usage: "fprint(fop, "%s\n", DATE);")
 
-THEDATE := "'@DATE@'"
+THEDATE = "'@DATE@'"
 
 ace: al2.h $(SRC2) al1.h $(SRC1) al0.h $(SRC0) $(SRC0A)
 	$(CC) $(FLAGS) -DDATE="\"$(THEDATE)\"" -o ace \
