Update website for ACE 5.3

--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,6 +1,7 @@
 name: ACE
-version: "5.2"
-date: 2016-03-11
+version: "5.3"
+license: "MIT"
+date: 2020-02-12
 description: |
     Advanced Coset Enumerator
 
@@ -8,7 +9,7 @@ authors:
     - name: Greg Gamble
       url: http://staffhome.ecm.uwa.edu.au/~00021149
     - name: Alexander Hulpke
-      url: http://www.math.colostate.edu/~hulpke
+      url: https://www.math.colostate.edu/~hulpke
     - name: George Havas
       url: http://staff.itee.uq.edu.au/havas
     - name: Colin Ramsay
@@ -18,17 +19,17 @@ maintainers:
     - name: Greg Gamble
       url: http://staffhome.ecm.uwa.edu.au/~00021149
     - name: Max Horn
-      url: http://www.quendi.de/math
+      url: https://www.quendi.de/math
 
 GAP: ">= 4.7"
 
 www: https://gap-packages.github.io/ace
-readme: README
+readme: README.md
 packageinfo: https://gap-packages.github.io/ace/PackageInfo.g
 
 downloads:
     - name: .tar.gz
-      url: https://github.com/gap-packages/ace/releases/download/v5.2/ace-5.2.tar.gz
+      url: https://github.com/gap-packages/ace/releases/download/v5.3/ace-5.3.tar.gz
 
 abstract: |
     The <span class="pkgname">ACE</span> package provides both an    interactive and non-interactive interface with the Todd-Coxeter coset   enumeration functions of the ACE (Advanced Coset Enumerator) C program.
@@ -40,26 +41,28 @@ keywords: |
     coset enumeration, Felsch strategy, HLT strategy, coset table, index, maxcosets, activecosets.
 citeas: |
     <p class='BibEntry'>
-    [<span class='BibKey'>GHHRH16</span>]   <b class='BibAuthor'>Gamble, G., Hulpke, A., Havas, G., Ramsay, C. and Horn, M.</b>,
+    [<span class='BibKey'>GHHRH20</span>]   <b class='BibAuthor'>Gamble, G., Hulpke, A., Havas, G., Ramsay, C. and Horn, M.</b>,
      <i class='BibTitle'>ACE, Advanced Coset Enumerator,
-             Version 5.2</i>
-     (<span class='BibYear'>2016</span>)<br />
+             Version 5.3</i>
+     (<span class='BibYear'>2020</span>)<br />
     (<span class='BibNote'>Refereed GAP package</span>),
     <span class='BibHowpublished'><a href="https://gap-packages.github.io/ace">https://gap-packages.github.io/ace</a></span>.
     </p>
     
 
 bibtex: |
-    @misc{ ACE5.2,
-      author =           {Gamble, G. and Hulpke, A. and Havas, G. and Ramsay, C. and Horn, M.},
-      title =            {{ACE}, Advanced Coset Enumerator, {V}ersion 5.2},
-      month =            {Mar},
-      year =             {2016},
+    @misc{ ACE5.3,
+      author =           {Gamble, G. and Hulpke, A. and Havas, G. and Ramsay, C.
+                          and Horn, M.},
+      title =            {{ACE}, Advanced Coset Enumerator, {V}ersion 5.3},
+      month =            {Feb},
+      year =             {2020},
       note =             {Refereed GAP package},
-      howpublished =     {\href                                  {https://gap-packages.github.io/ace}
-                          {\texttt{https://gap-packages.github.io/}\discretionary {}{}{}\texttt{ace}}},
-      keywords =         {coset  enumeration;  Felsch  strategy;  HLT  strategy;  coset table; index;
-                          maxcosets; activecosets},
-      printedkey =       {GHHRH16}
+      howpublished =     {\href             {https://gap-packages.github.io/ace}
+                          {\texttt{https://gap-packages.github.io/}\discretionary
+                          {}{}{}\texttt{ace}}},
+      keywords =         {coset  enumeration;  Felsch  strategy;  HLT  strategy;
+                          coset table; index; maxcosets; activecosets},
+      printedkey =       {GHHRH20}
     }
 
