--- a/src.old/ex/ex000.in
+++ b/src.old/ex/ex000.in
@@ -1,4 +1,4 @@
-
+# echo:1;
 # ex000.in - Colin Ramsay - 8 May 99
 # + sr:2;  - Greg Gamble  - 1 Apr 01
 
@@ -19,8 +19,7 @@ Subgroup Name: C_5 ;
 gen:ab;
 Monit :1
 END;
-STATistics;
   print  TABLE : -1, 12 ;
 st;
 pr:-1,12;
-
+options;
