--- a/Makefile.in
+++ b/Makefile.in
@@ -17,10 +17,11 @@ distclean: clean
 doc:
 	(cd doc;./make_doc)
 
-otherdoc:
-	(cd standalone-doc;latex ace3001;bibtex ace3001;latex ace3001;latex ace3001)
-	(cd standalone-doc;dvips ace3001 -o)
-	(cd standalone-doc;rm ace3001.{toc,blg,log,aux})
+# TeX sources of ace3001 manual are available in history of the package repository
+# otherdoc:
+#	(cd standalone-doc;latex ace3001;bibtex ace3001;latex ace3001;latex ace3001)
+#	(cd standalone-doc;dvips ace3001 -o)
+#	(cd standalone-doc;rm ace3001.{toc,blg,log,aux})
 
 Makefile: configure Makefile.in $(GAPPATH)/sysinfo.gap
 	./configure "$(GAPPATH)"
