--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,8 +26,8 @@ jobs:
       fail-fast: false
       matrix:
         gap-version:
-          - master
-          - stable-4.15
+          - 'devel'
+          - '4.15'
           - '4.14'
           - '4.13'
           - '4.12'
@@ -78,7 +78,7 @@ jobs:
       - uses: gap-actions/setup-gap@v3
       - uses: gap-actions/build-pkg-docs@v2
         with:
-          use-latex: true
+          use-latex: 'true'
       - name: 'Upload documentation'
         uses: actions/upload-artifact@v4
         with:
